// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactCard Snapshot matches snapshot for all categories: Category: community 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        globe
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for all categories: Category: friends-family 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        users
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for all categories: Category: goals-hobbies 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        trophy
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for all categories: Category: miscellaneous 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        bookmark
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for all categories: Category: work 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        briefcase
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for contact with summary 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        users
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#547fab",
          "borderRadius": 4,
          "bottom": 0,
          "height": 25,
          "justifyContent": "center",
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "width": 25,
        }
      }
    >
      <Text>
        info
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for contact without photo 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "justifyContent": "center",
            "width": "100%",
          },
          {
            "backgroundColor": "#e4e7e7",
          },
        ]
      }
    >
      <Text>
        user-circle
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        users
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;

exports[`ContactCard Snapshot matches snapshot for contact without summary 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ece7df",
        "borderRadius": 12,
        "elevation": 4,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 8,
        "width": 180,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "aspectRatio": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "https://example.com/photo.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#ece7df",
          "height": 100,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingLeft": 12,
          "paddingRight": 48,
          "paddingTop": 16,
          "position": "relative",
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 4,
            "height": 25,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 25,
          },
          {
            "backgroundColor": "#d4b82b",
          },
        ]
      }
    >
      <Text>
        users
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 4,
          }
        }
      >
        John Doe
      </Text>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#778588",
            "fontSize": 12,
          }
        }
      >
        Friend from college
      </Text>
    </View>
  </View>
</View>
`;
